[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Daniel Marin <danmarcab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.0"
itertools = "0.8.2"
aoc-runner = "0.2.0"
aoc-runner-derive = "0.2.0"
